04-eks/10-eks-monitoring/02-Promethus-Logs/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mylb
  # Uncomment following line for fargate
  namespace: mon
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - http:
      paths:  
      - path: /*
        backend:
          serviceName: "nginx-ingress-nginx-controller"
          servicePort: 80
